# pySBOL3

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .wokeignore  LICENSE.txt  README.md  bump-version.sh  pyproject.toml  setup.cfg  setup.py
docs/: RELEASE.md  conf.py  dbtl.rst  design_decisions.rst  extensions.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  ontology.rst  repositories.rst  requirements.txt  sbol_data_model.rst  sbol_examples.rst  validation.rst  visitor.rst
examples/: analysisext.py  circuit.py  compext.py  datasheetext.py  getting_started.ipynb  rdf-compare.py  read-circuit.py  roundtrip.py  visitor.py
ontologies/: SBO_OWL.owl
sbol3/: __init__.py  attachment.py  boolean_property.py  collection.py  combderiv.py  component.py  compound_unit.py  compref.py  config.py  constants.py  constraint.py  custom.py  datetime_property.py  document.py  error.py  expdata.py  extdef.py  feature.py  float_property.py  identified.py  implementation.py  int_property.py  interaction.py  interface.py  issue_415.py  localsub.py  location.py  measurement.py  model.py  object.py  om_compound.py  om_prefix.py  om_unit.py  ontology.py  ownedobject.py  participation.py  property.py  property_base.py  provenance.py  refobj_property.py  (+11 more)
test/: test_annotation.py  test_attachment.py  test_collection.py  test_combderiv.py  test_component.py  test_compref.py  test_config.py  test_custom.py  test_document.py  test_examples.py  test_expdata.py  test_extdef.py  test_extension.py  test_feature.py  test_identified.py  test_implementation.py  (+27 more)
(+7 files in other folders)
